added youtube videos

--- a/MelaatiJ/webpages/Reflections.html
+++ b/MelaatiJ/webpages/Reflections.html
@@ -47,8 +47,23 @@
     </h1>
 
 </div>
-<h1 class="page_header">Reflections</h1>
-<div class="container6">
+<h1 class="page_header">My Coding Adventures</h1>
+<div class="containerVideos">
+    <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vvUDVDVqW08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/FpzlBFE6qDk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+    <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8kDGcLFt3Us" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+    <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vx7WgvFjQFI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
 
 </div>
 
