--- a/MelaatiJ/webpages/Skills.html
+++ b/MelaatiJ/webpages/Skills.html
@@ -48,7 +48,67 @@
 
 </div>
 <h1 class="page_header">Skills</h1>
-<div class="container8">
+<div class="containerSkills">
+
+    <div class="skillsTable">
+        <table>
+            <tr>
+                <td><strong>Languages</strong></td>
+                <td><strong>Skill Level</strong></td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>Python</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>Django</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>MERN stack</td>
+                <td>Novice</td>
+            </tr>
+            <tr>
+                <td>Adobe Spark</td>
+                <td>Expert</td>
+            </tr>
+
+            <tr>
+                <td><strong>Systems</strong></td>
+                <td><strong>Skill Level</strong></td>
+            </tr>
+            <tr>
+                <td>Linux</td>
+                <td>Intermediate</td>
+            </tr>
+            <tr>
+                <td>GitHub</td>
+                <td>Intermediate</td>
+            </tr>
+        </table>
+    </div>
+    <div class="skillsImage">
+        <img class="projectPics" src="/melaatiJWeb/MelaatiJ/picturesOfMe/hardworkdedicated.jpg" alt="">
+
+    </div>
+
+<!--    <div class="flower">-->
+<!--        <img class="projectPics" src="/melaatiJWeb/MelaatiJ/picturesOfMe/flower.png" alt="">-->
+
+<!--    </div>-->
+
 
 </div>
 </body>
