finished with deploment links

--- a/MelaatiJ/webpages/Projects.html
+++ b/MelaatiJ/webpages/Projects.html
@@ -61,7 +61,7 @@
         have the same templating for each page. On the app it allows the user to log in or for new users to create  profile.
         When a user visits the site they are able to see all posts and search posts and if he user creates an account they are able to
         create, edit or delete their post and use the search. </h3>
-        <p class="animated heartBeat"><a href="" ><button class="projectBtn">View The Project!</button></a></p>
+        <p class="animated heartBeat"><a href="http://app1.melaatij.com/" target="_blank" ><button class="projectBtn">View The Project!</button></a></p>
 
 
     </div>
@@ -85,7 +85,7 @@
         <h3 class="projectText">The Mock twitter project is our version of tweitter using the MERN stack. Users can create an account and loging. Once they are
         signed in they can add tweets privately on their webpage, or publicly so all the users can see. When they create n account, it creates a profile page with
         background image as well as a profile image. When a tweet is added , it shows up on the home page. </h3>
-        <p class="animated heartBeat"><a href="" ><button class="projectBtn">View The Project!</button></a></p>
+        <p class="animated heartBeat"><a href="http://app3.melaatij.com/" target="_blank" ><button class="projectBtn">View The Project!</button></a></p>
 
     </div>
     <div>
@@ -99,7 +99,7 @@
         i can express my love for culture, Graphic design and event planning. I not only plan all the events, but i also created a flyer for every event. It has grown my love for community anf technology.
         For my Passion project I build a website for my bookclub where you can become a member, see all the amazing books we read and have a link for it online as well as the events we have twice a month.
         Discussion board and profiles are on the way as well as a payment method for selling tshirts and Kawaii Kits. FuLLStack DJANGO was used for this project. </h3>
-        <p class="animated heartBeat"><a href="" ><button class="projectBtn">View The Project!</button></a></p>
+        <p class="animated heartBeat"><a href="http://app2.melaatij.com/" target="_blank" ><button class="projectBtn">View The Project!</button></a></p>
     </div>
 </div>
 
