--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="containerAboutMe">
 
     <div class="animated fadeIn">
-        <img class="aboutMe_images" src="/melaatiJWeb/picturesOfMe/meetingAmzing.jpg" alt="">
+        <img class="aboutMe_images" src="../melaatiJWeb/picturesOfMe/meetingAmzing.jpg" alt="">
     </div>
     <div class="animated bounceInRight">
         <h2>
@@ -67,7 +67,7 @@
         </h2>
         <a href="./webpages/AboutMe2.html">
             <button>
-                <img class="rightArrow" src="/melaatiJWeb/picturesOfMe/right-arrow.png" alt="">
+                <img class="rightArrow" src="../melaatiJWeb/picturesOfMe/right-arrow.png" alt="">
             </button>
         </a>
     </div>
