--- a/webpages/AboutMe2.html
+++ b/webpages/AboutMe2.html
@@ -65,17 +65,17 @@
         </h2>
         <a href="../index.html">
             <button>
-                <img class="rightArrow" src="/melaatiJWeb/picturesOfMe/left-arrow.png" alt="">
+                <img class="rightArrow" src="../picturesOfMe/left-arrow.png" alt="">
             </button>
         </a>
         <a href="AboutMe3.html">
             <button>
-                <img class="rightArrow" src="/melaatiJWeb/picturesOfMe/right-arrow.png" alt="">
+                <img class="rightArrow" src="../picturesOfMe/right-arrow.png" alt="">
             </button>
         </a>
     </div>
     <div class="animated fadeIn">
-        <img class="aboutMe_images" src="/melaatiJWeb/picturesOfMe/meBeingAleader.JPG"
+        <img class="aboutMe_images" src="../picturesOfMe/meBeingAleader.JPG"
              alt="Melaati leading a team during a 3day stratup competition">
     </div>
 
