--- a/webpages/Projects.html
+++ b/webpages/Projects.html
@@ -51,7 +51,7 @@
 
 <div class="containerProjects">
     <div>
-        <img class="projectPics" src="/melaatiJWeb/picturesOfMe/django2.png" alt="">
+        <img class="projectPics" src="../picturesOfMe/django2.png" alt="">
 
     </div>
     <div class="pushDown">
@@ -67,7 +67,7 @@
     </div>
 
     <div>
-        <img class="projectPics" src="/melaatiJWeb/picturesOfMe/MERNPROJECT.png" alt="">
+        <img class="projectPics" src="../picturesOfMe/MERNPROJECT.png" alt="">
 
     </div>
     <div class="pushDown">
@@ -80,7 +80,7 @@
     </div>
     <div>
 
-        <img class="projectPics" src="/melaatiJWeb/picturesOfMe/MangwaMangwawebsite.png" alt="">
+        <img class="projectPics" src="../picturesOfMe/MangwaMangwawebsite.png" alt="">
     </div>
     <div class="pushDown">
         <h2 class="animated heartBeat">Manga and Manhwa Book Club Website</h2>
@@ -93,7 +93,7 @@
     </div>
 
     <div>
-        <img class="projectPics" src="/melaatiJWeb/picturesOfMe/pokeman1.png" alt="">
+        <img class="projectPics" src="../picturesOfMe/pokeman1.png" alt="">
 
     </div>
     <div class="pushDown">
