--- a/webpages/Skills.html
+++ b/webpages/Skills.html
@@ -100,7 +100,7 @@
         </table>
     </div>
     <div class="skillsImage">
-        <img class="projectPics" src="/melaatiJWeb/picturesOfMe/hardworkdedicated.jpg" alt="">
+        <img class="projectPics" src="../picturesOfMe/hardworkdedicated.jpg" alt="">
 
     </div>
 
