--- a/webpages/AboutMe3.html
+++ b/webpages/AboutMe3.html
@@ -52,7 +52,7 @@
 
 
     <div class="animated fadeIn">
-        <img class="aboutMe_images" src="/melaatiJWeb/picturesOfMe/athenaTech3rdPlacewInner.JPG"
+        <img class="aboutMe_images" src="../picturesOfMe/athenaTech3rdPlacewInner.JPG"
              alt="Athena Tech Hackathon">
     </div>
     <div class="animated bounceInRight">
@@ -65,7 +65,7 @@
         </h2>
         <a href="AboutMe2.html">
             <button>
-                <img class="rightArrow" src="/melaatiJWeb/picturesOfMe/left-arrow.png" alt="">
+                <img class="rightArrow" src="../picturesOfMe/left-arrow.png" alt="">
             </button>
         </a>
     </div>
