changed the order of nav bar

--- a/webpages/ContactMe.html
+++ b/webpages/ContactMe.html
@@ -15,13 +15,8 @@
 
     </h1>
     <h1>
-        <a href="ContactMe.html">
-            <button class="navBtn">Contact Me</button>
-        </a>
-    </h1>
-    <h1>
-        <a href="Graphics.html">
-            <button class="navBtn">Graphics</button>
+        <a href="Resume.html">
+            <button class="navBtn">Resume</button>
         </a>
     </h1>
     <h1>
@@ -30,18 +25,23 @@
         </a>
     </h1>
     <h1>
-        <a href="Resume.html">
-            <button class="navBtn">Resume</button>
-        </a>
-    </h1>
-    <h1>
         <a href="Skills.html">
             <button class="navBtn">Skills</button>
         </a>
     </h1>
     <h1>
+        <a href="Graphics.html">
+            <button class="navBtn">Graphics</button>
+        </a>
+    </h1>
+    <h1>
+        <a href="ContactMe.html">
+            <button class="navBtn">Contact Me</button>
+        </a>
+    </h1>
+    <h1>
         <a href="Reflections.html">
-            <button class="navBtn">Videos</button>
+            <button class="navBtn">Reflections</button>
         </a>
     </h1>
 
