i had to fix the index page, the nav is up to date

--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
 
 <div class="navBar">
     <h1>
-        <a href="index.html">
+        <a href="../index.html">
             <button class="navBtn">Home</button>
         </a>
 
     </h1>
     <h1>
-        <a href="./webpages/ContactMe.html">
-            <button class="navBtn">Contact Me</button>
-        </a>
-    </h1>
-    <h1>
-        <a href="./webpages/Graphics.html">
-            <button class="navBtn">Graphics</button>
+        <a href="./webpages/Resume.html">
+            <button class="navBtn">Resume</button>
         </a>
     </h1>
     <h1>
@@ -32,18 +27,23 @@
         </a>
     </h1>
     <h1>
-        <a href="./webpages/Resume.html">
-            <button class="navBtn">Resume</button>
-        </a>
-    </h1>
-    <h1>
         <a href="./webpages/Skills.html">
             <button class="navBtn">Skills</button>
         </a>
     </h1>
     <h1>
+        <a href="./webpages/Graphics.html">
+            <button class="navBtn">Graphics</button>
+        </a>
+    </h1>
+    <h1>
+        <a href="./webpages/ContactMe.html">
+            <button class="navBtn">Contact Me</button>
+        </a>
+    </h1>
+    <h1>
         <a href="./webpages/Reflections.html">
-            <button class="navBtn">Videos</button>
+            <button class="navBtn">Reflections</button>
         </a>
     </h1>
 
