should be good to go

--- a/webpages/AboutMe.html
+++ b/webpages/AboutMe.html
@@ -56,13 +56,14 @@
     </div>
     <div class="animated bounceInRight">
         <h2>
+
             My Name is Melaati Jayah. I was born in Colombo Sri-Lanka which is an island
             south of India. Sri-Lanka is also known as "The Tear Drop Of India" because of its shape and size. I came
             with my parents and my older brother to the United States at a very young age of 4. Memphis TN has been my
             home and where I was raised. At a young age I grew love for technology. When my hands touch the key board, and I
             turned on my computer screen, It was another world. I went from restaurant manager to software developer, from
             service to development. I have learned from so many and my passion to continue learning never stops. I plan on
-            bringing Memphis my love for tech, my love for problem solving, and my skills ive gained on the way of my journey
+            bringing Memphis my love for tech, my love for problem solving, and my skills I have gained on the way of my journey
             to this day.
         </h2>
         <a href="AboutMe2.html">
