--- a/webpages/AboutMe2.html
+++ b/webpages/AboutMe2.html
@@ -55,13 +55,11 @@
         <h2>
             Since I was little, my dad raised me to be an inventor, a creator of anything with tools we
             found on the street or at home. A very important story that I will never forget is when my father and i
-            walked
-            on the Green Line in Memphis and found Kayman trees. Kayman trees are similar to bamboo trees with its outer
+            walked on the Green Line in Memphis and found Kayman trees. Kayman trees are similar to bamboo trees with its outer
             appearance and texture. We cut the tree, broke it into sticks and made lanterns for our friends celebrating
-            Sri-Lanka's special lantern holiday. With Code Crew Code Schhol I am still connected to my roots, still use
+            Sri-Lanka's special lantern holiday. With Code Crew Code School I am still connected to my roots, I still use
             the skills my dad has taught me and expand my mind in the world of technology. Im excited for my journey and
-            the
-            skill I will gain one step at a time.
+            the skills I will gain one step at a time.
         </h2>
         <a href="../index.html">
             <button>
