--- a/webpages/AboutMe3.html
+++ b/webpages/AboutMe3.html
@@ -61,7 +61,7 @@
             hack-a-thons in different cities, joined Memphis tech groups, became an event coordinator connecting and
             with tech leaders through the city, and led game jams. In my journey i have met so many amazing, talented
             and ambitious techies in town. The Memphis tech scene has been a whole new world to
-            me. The challenges made me stronger , the people have molded me and my passion has made me who i am.
+            me. The challenges made me stronger , the people have molded me and my passion has made me who I am.
         </h2>
         <a href="AboutMe2.html">
             <button>
